Add BEAGLE native library setup to IntelliJ and Eclipse dev guides